--- a/package.json
+++ b/package.json
@@ -20,11 +20,20 @@
   "homepage": "https://github.com/masungwon/argo#readme",
   "dependencies": {
     "angular": "^1.5.8",
+    "angular-animate": "^1.5.8",
+    "angular-aria": "^1.5.8",
+    "angular-material": "^1.1.1",
+    "angular-mocks": "^1.5.8",
+    "angular-ui-bootstrap": "^2.2.0",
     "angular-ui-router": "^0.3.2",
+    "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
     "chalk": "^1.1.3",
+    "eslint": "^3.10.0",
     "express": "^4.14.0",
+    "jquery": "^3.1.1",
+    "lodash": "^4.16.6",
     "mysql": "^2.12.0",
     "nodemon": "^1.11.0",
     "semantic-ui": "^2.2.6",
