--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "chalk": "^1.1.3",
     "eslint": "^3.10.0",
     "express": "^4.14.0",
+    "infinite-scroll": "0.0.1-security",
     "jquery": "^3.1.1",
     "lodash": "^4.16.6",
     "mysql": "^2.12.0",
+    "ng-infinite-scroll": "^1.3.0",
     "nodemon": "^1.11.0",
     "semantic-ui": "^2.2.6",
     "sequelize": "^3.25.0",
